now working on adding another icon for other skills. got inline block for my skills section and everything is aligned correctly

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -17,6 +17,7 @@ body{
 .main-section{
   height: 100vh;
   margin: 0;
+  overflow: hidden;
   background-color: black;
   background-position: fixed;
 }
@@ -73,7 +74,7 @@ body{
   margin-left: 15%;
 }
 .section-three{
-  height: 100vh;
+  height: 200vh;
   background-color: #D4D4D4;
   /* background-color: #29C3ED; */
   padding: 1px;
@@ -84,27 +85,46 @@ body{
   font-family: "Roboto-Regular.ttf";
   color: white;
   font-size: 25px;
-  margin-top: 15%;
-  margin-bottom: 7%;
+  margin-top: 7%;
+  /* margin-bottom: 7%; */
   width: 420px;
   margin-left: 33%;
-  padding: 8px;
   box-sizing: border-box;
   border: 2px solid white;
 }
 .skills{
-  /* padding-top: 100px; */
   overflow: hidden;
   list-style-type: none;
-  margin: 0;
+  margin-left: 10%;
+  margin-right: 10%;
+  overflow: hidden;
   padding: 0;
-  /* display: inline-block; */
+  padding-top: 94px;
 }
 .language{
-  display: inline;
   text-align: center;
   padding: 16px;
+  display: inline-block;
+  padding-bottom: 100px;
+  width: 30%;
 }
 .lang-img{
-  height: 150px;
+  height: 130px;
+}
+.other-skils{
+  text-align: center;
+}
+.other-skills-img{
+  height: 130px;
+}
+.other-skils-ul{
+  list-style-type: none;
+  margin-top: -50px;
+  margin-left: 20%;
+  margin-right: 20%;
+  height: 120px;
+  border: 2px solid black;
+}
+.other-skills-li{
+  margin-top: 45px;
 }
